<resources>
    <string name="app_name">Dashboard UI Design</string>
    <string name="work">Work</string>
    <string name="education">Education</string>
    <string name="startup">Startup</string>
    <string name="medical">Medical</string>
    <string name="setting">Settings</string>
    <string name="travel">Travel</string>
    <string name="fitness">Fitness</string>
    <string name="customNotification">Custom Notification</string>
    <string name="gaming">Gaming</string>
    <string name="collapsing">Collapsing </string>
    <string name="fingerprint">Use Your Fingerprint To Access</string>
    <string name="singup">SingUp</string>
    <string name="bottom_sheet">Bottom Sheet</string>
</resources>